--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-    "name": "discord-bot",
-    "version": "1.0.0",
-    "description": "A simple Discord bot using Railway",
-    "main": "index.js",
-    "scripts": {
-      "start": "node index.js"
-    },
-    "dependencies": {
-      "discord.js": "^14.13.0",
-      "express": "^4.18.2"
-    }
+  "name": "slash-command-register",
+  "version": "1.0.0",
+  "main": "register-commands.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "discord.js": "^14.19.2",
+    "dotenv": "^16.5.0"
   }
-  
+}
