--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "discord.js": "^14.13.0",
+        "dotenv": "^16.5.0",
         "express": "^4.21.2",
         "node-cron": "^3.0.3"
     }
